<resources>
    <string name="app_name">Memo</string>
    <string name="title">메모</string>
    <string name="new_memo">새 메모</string>
    <string name="input_text">내용를 입력해주세요.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="sure_exit">정말 종료하시겠습니까?</string>
    <string name="input_title">제목을 입력해주세요</string>
    <string name="input_content">본문을 입력해주세요</string>
    <string name="ok">확인</string>
    <string name="modify">수정</string>
    <string name="cancel">취소</string>
    <string name="change">변경</string>
    <string name="delete">삭제</string>
    <string name="home">메인으로</string>
</resources>
