<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.lectinua.memo.fragment.OneMemoFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSub"
        tools:context=".OneMemoFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/relStatusBar"
            android:layout_margin="16dp">

            <!--textView-->
            <RelativeLayout
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"
                    android:id="@+id/tv_date"
                    android:textAlignment="textStart"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"
                    android:id="@+id/tv_time"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:id="@+id/tv_title"
                    android:background="#00000000"
                    android:layout_below="@id/tv_date"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_title"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="80dp"
                    android:background="#00000000"
                    android:gravity="top"
                    android:textSize="20dp" />

            </RelativeLayout>

            <!--editText-->
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"
                    android:id="@+id/tv_date2"
                    android:textAlignment="textStart"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"
                    android:id="@+id/tv_time2"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/input_title"
                    android:id="@+id/edit_title"
                    android:background="#00000000"
                    android:layout_below="@id/tv_date2"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"/>

                <EditText
                    android:id="@+id/edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/edit_title"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="80dp"
                    android:background="#00000000"
                    android:gravity="top"
                    android:hint="@string/input_content"
                    android:textSize="20dp" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/box_round_2"
                android:elevation="20dp"
                android:onClick="@{fragment::ok}"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:text="@string/ok"/>

            <Button
                android:visibility="invisible"
                android:enabled="false"
                android:id="@+id/btn_delete"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/box_round_2"
                android:elevation="20dp"
                android:onClick="@{fragment::delete}"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:text="@string/delete"/>

            <Button
                android:id="@+id/btn_modify"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/box_round_2"
                android:elevation="20dp"
                android:onClick="@{fragment::modify}"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:text="@string/modify"/>

        </LinearLayout>

    </FrameLayout>
</layout>